--- a/Weitwinkel_Compton/Protokoll/bibliography.bib
+++ b/Weitwinkel_Compton/Protokoll/bibliography.bib
@@ -1,5 +1,6 @@
 @misc{HPGe-Detektor,
   year = {2021},
+  author = {Nuclear Power},
   title = {Principle of Operation of HPGe Detectors},
   howpublished = {\url{https://www.nuclear-power.com/nuclear-engineering/radiation-detection/semiconductor-detectors/high-purity-germanium-detectors-hpge/principle-of-operation-of-hpge-detectors/}}
   }
