--- a/Weitwinkel_Compton/Protokoll/main.tex
+++ b/Weitwinkel_Compton/Protokoll/main.tex
@@ -83,6 +83,7 @@ Betreuer: & \betreuer\end{tabular}}
 \input{theorie.tex}
 \input{kalibrierung.tex}
 \input{kalibrierung_szintillator.tex}
+\input{diskussion.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
