--- a/FPGA/Protokoll/diskussion.tex
+++ b/FPGA/Protokoll/diskussion.tex
@@ -1,4 +1,4 @@
-\section{Diskusion}
+\section{Diskussion}
 Wir haben in diesem Versuch gelernt wie man Daten mithilfe eines FPGA verarbeitet.
 Anhand von Daten wie sie typischerweise in Kalorimetern am ATLAS-Detektor auftreten, haben wir ein Modul zusammengestellt, welches die Daten digital filtert und das Maximum der gefilterten Daten bestimmt.
 Es ist klar geworden, dass sich viele Aufgaben, die man typischerweise in sequentiellen Rechnern implementieren würde, parallelisieren lassen, um auch mit größeren Datenmengen fertig zu werden.
